--- a/src/assets/css/cardcomponent.css
+++ b/src/assets/css/cardcomponent.css
@@ -128,3 +128,11 @@ a {
 .building-name{
 	font-family: Font-Medium;
 }
+.verified{
+	font-family: Font-Bold;
+	color: green;
+}
+.not-verified{
+	font-family: Font-Bold;
+	color: red;
+}
