--- a/src/assets/css/availableRoom.css
+++ b/src/assets/css/availableRoom.css
@@ -1,10 +1,18 @@
-
+.outer-body{
+  margin-left: 80px;
+  margin-right: 40px;
+}
 .price-display{
 	font-family: Font-Medium;
 	font-size: 14px;
 	letter-spacing: 0px;
 }
-
+.content-heading{
+  padding: 10px;
+  padding-left: 20px;
+  font-family: Font-Bold;
+  font-size: 40px;
+}
 .less-than{
 	font-family: Font-Thin;
 	font-size: 16px;
