--- a/src/assets/css/frontPage.css
+++ b/src/assets/css/frontPage.css
@@ -58,7 +58,8 @@
 .component{
 	font-family: 'Font-Medium';
 	color: #60C3AD;
-
+	padding: 8px 10px 8px 10px;
+	
 }
 .bar-components{
 	display:flex;
@@ -66,9 +67,25 @@
 	align-items: center;
 	width: 50%;
 }
+.logo{
+	font-family: 'Font-Bold';
+	color: #60C3AD;
+}
 .cust-button2:hover{
 	background-color: white;
 	color:rgb(96, 195, 173);
+	border-width: 2px;
+}
+.custom-button3:hover,.component:hover{
+	border-radius: 0px;
+	background: #60C3AD;
+	color: white;
+	font-family: 'Font-Medium';
+
+	
+	border-color:  #60C3AD;
+	border-width: 2px;
+	box-shadow: 0px,0px,0px,0px;
 }
 .cust-button2{
 	border-radius: 0px;
@@ -93,4 +110,41 @@
 	margin-left:60px;
 	color:rgb(96, 195, 173);
 
+}
+.image-banner{
+	width: 100%;
+	height: 400px;
+}
+.modal-alert{
+	padding: 10px;
+	margin-top:20px;
+	margin-left:20px;
+	font-family:Font-Medium;
+	font-size: 20px;
+}
+.front-head{
+	font-family: Font-Bold;
+	text-align: left;
+
+}
+.front-para{
+	font-family: Font-Light;
+	font-size: 20px
+}
+.content-front{
+	padding: 40px;
+	padding-left: 80px
+}
+.front-head-ch{
+	color:rgb(96, 195, 173);
+}
+.custom-button3,.custom-button3:focus{
+	border-radius: 0px;
+	background: white;
+	font-family: 'Font-Medium';
+
+	color: rgb(96, 195, 173);
+	border-color: white;
+	border-width: 2px;
+	box-shadow: 0px,0px,0px,0px;
 }
